--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
+  "version": "1.0.1",
   "dependencies": {
     "@slimio/unzipper": "^0.2.0",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
+    "helmet": "^5.0.2",
     "mime-types": "^2.1.35",
     "moment": "^2.29.3",
     "multer": "^1.4.4",
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
